force-app/main/default/objects/Exam_Result__c/Exam_Result__c.object-meta.xml
<CustomObject>
    <description>Candidate Exam Results</description>
    <label>Exam Result</label>
    <nameField>
        <displayFormat>ET-{0000000}</displayFormat>
        <label>Exam Taken Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exam Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>