force-app/main/default/objects/Exam_Result__c/fields/Candidate2__c.field-meta.xml
<CustomField>
    <fullName>Candidate2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>IDC Candidate</description>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Exam Results</relationshipLabel>
    <relationshipName>Exam_Results</relationshipName>
    <type>Lookup</type>
</CustomField>