force-app/main/default/objects/Exam_Result__c/fields/Candidate_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_First_Name__c</fullName>
    <formula>Candidate2__r.First_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate First Name</label>
    <type>Text</type>
</CustomField>