force-app/main/default/objects/Exam_Result__c/fields/Candidate_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Full_Name__c</fullName>
    <formula>Candidate2__r.First_Name__c  &amp; &quot; &quot; &amp;  Candidate2__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Name</label>
    <type>Text</type>
</CustomField>