force-app/main/default/objects/Exam_Result__c/fields/Equipment_Complete__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Theory Equipment Exam completed?</description>
    <inlineHelpText>Theory Equipment Exam completed?</inlineHelpText>
    <label>Equipment Complete</label>
    <type>Checkbox</type>
</CustomField>