force-app/main/default/objects/Exam_Result__c/fields/Equipment_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Equipment_End_Time__c</fullName>
    <label>Equipment End Time</label>
    <type>DateTime</type>
</CustomField>