force-app/main/default/objects/Exam_Result__c/fields/Equipment_Score__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Score__c</fullName>
    <description>Theory Exam - Equipment Score</description>
    <label>Equipment Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>