force-app/main/default/objects/Exam_Result__c/fields/Equipment_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Start_Time__c</fullName>
    <label>Equipment Start Time</label>
    <type>DateTime</type>
</CustomField>