force-app/main/default/objects/Exam_Result__c/fields/Exam__c.field-meta.xml
<CustomField>
    <fullName>Exam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Result for Exam</description>
    <inlineHelpText>Result for Exam</inlineHelpText>
    <label>Exam</label>
    <referenceTo>Exam__c</referenceTo>
    <relationshipLabel>Exam Results</relationshipLabel>
    <relationshipName>Exam_Results</relationshipName>
    <type>Lookup</type>
</CustomField>