force-app/main/default/objects/Exam_Result__c/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <formula>IMAGE(IF (
   OR(
     AND(Physics_Complete__c = true,  
         Physiology_Complete__c = true,  
         RDP_Complete__c = true,  
         Skills_Complete__c = true,  
         Equipment_Complete__c = true
        ),
        GSP_Complete__c = true
     ), &quot;/resource/1595726407000/greenBall?&quot;, 
    &quot;/resource/1595726542000/greyball&quot;), &quot;Exam Flag&quot;, 20, 20)</formula>
    <label>Complete?</label>
    <type>Text</type>
</CustomField>