force-app/main/default/objects/Exam_Result__c/fields/GSP_Complete__c.field-meta.xml
<CustomField>
    <fullName>GSP_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GSP exam is completed?</description>
    <inlineHelpText>GSP exam is completed?</inlineHelpText>
    <label>GSP Complete</label>
    <type>Checkbox</type>
</CustomField>