force-app/main/default/objects/Exam_Result__c/fields/GSP_Duration__c.field-meta.xml
<CustomField>
    <fullName>GSP_Duration__c</fullName>
    <formula>TEXT( 
ROUND(MOD((GSP_End_Time__c- GSP_Start_Time__c)*24,24),0) 
) &amp;&quot; Hours &quot; &amp; 
TEXT( 
ROUND(MOD((GSP_End_Time__c- GSP_Start_Time__c)*1440,60),0) 
) &amp;&quot; Minutes &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GSP Duration</label>
    <type>Text</type>
</CustomField>