force-app/main/default/objects/Exam_Result__c/fields/GSP_End_Time__c.field-meta.xml
<CustomField>
    <fullName>GSP_End_Time__c</fullName>
    <label>GSP End Time</label>
    <type>DateTime</type>
</CustomField>