force-app/main/default/objects/Exam_Result__c/fields/GSP_Score__c.field-meta.xml
<CustomField>
    <fullName>GSP_Score__c</fullName>
    <description>GSP Exam Score</description>
    <inlineHelpText>GSP Exam Score</inlineHelpText>
    <label>GSP Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>