force-app/main/default/objects/Exam_Result__c/fields/GSP_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>GSP_Start_Time__c</fullName>
    <label>GSP Start Time</label>
    <type>DateTime</type>
</CustomField>