force-app/main/default/objects/Exam_Result__c/fields/IDC__c.field-meta.xml
<CustomField>
    <fullName>IDC__c</fullName>
    <description>IDC Key fields - No to be exposed</description>
    <label>IDC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>