force-app/main/default/objects/Exam_Result__c/fields/Physics_Complete__c.field-meta.xml
<CustomField>
    <fullName>Physics_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Theory - Physics completed?</description>
    <inlineHelpText>Theory - Physics completed?</inlineHelpText>
    <label>Physics Complete</label>
    <type>Checkbox</type>
</CustomField>