force-app/main/default/objects/Exam_Result__c/fields/Physics_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Physics_End_Time__c</fullName>
    <label>Physics End Time</label>
    <type>DateTime</type>
</CustomField>