force-app/main/default/objects/Exam_Result__c/fields/Physics_Score__c.field-meta.xml
<CustomField>
    <fullName>Physics_Score__c</fullName>
    <description>Theory Physics Score</description>
    <label>Physics Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>