force-app/main/default/objects/Exam_Result__c/fields/Physics_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Physics_Start_Time__c</fullName>
    <label>Physics Start Time</label>
    <type>DateTime</type>
</CustomField>