force-app/main/default/objects/Exam_Result__c/fields/Physiology_Complete__c.field-meta.xml
<CustomField>
    <fullName>Physiology_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Theory Physiology Exam Completed?</description>
    <inlineHelpText>Theory Physiology Exam Completed?</inlineHelpText>
    <label>Physiology Complete</label>
    <type>Checkbox</type>
</CustomField>