force-app/main/default/objects/Exam_Result__c/fields/Physiology_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Physiology_End_Time__c</fullName>
    <label>Physiology End Time</label>
    <type>DateTime</type>
</CustomField>