force-app/main/default/objects/Exam_Result__c/fields/Physiology_Score__c.field-meta.xml
<CustomField>
    <fullName>Physiology_Score__c</fullName>
    <description>Theory Exam - Physiology Score</description>
    <label>Physiology Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>