force-app/main/default/objects/Exam_Result__c/fields/Physiology_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Physiology_Start_Time__c</fullName>
    <label>Physiology Start Time</label>
    <type>DateTime</type>
</CustomField>