force-app/main/default/objects/Exam_Result__c/fields/RDP_Complete__c.field-meta.xml
<CustomField>
    <fullName>RDP_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RDP Exam Completed?</description>
    <inlineHelpText>RDP Exam Completed?</inlineHelpText>
    <label>RDP Complete</label>
    <type>Checkbox</type>
</CustomField>