force-app/main/default/objects/Exam_Result__c/fields/RDP_End_Time__c.field-meta.xml
<CustomField>
    <fullName>RDP_End_Time__c</fullName>
    <label>RDP End Time</label>
    <type>DateTime</type>
</CustomField>