force-app/main/default/objects/Exam_Result__c/fields/RDP_Score__c.field-meta.xml
<CustomField>
    <fullName>RDP_Score__c</fullName>
    <description>Theory Exam RDP Score</description>
    <label>RDP Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>