force-app/main/default/objects/Exam_Result__c/fields/RDP_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>RDP_Start_Time__c</fullName>
    <label>RDP Start Time</label>
    <type>DateTime</type>
</CustomField>