force-app/main/default/objects/Exam_Result__c/fields/Results_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Results_Transcript__c</fullName>
    <description>The transcript of the answers the candidate made for the exam.</description>
    <label>Results Transcript</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>