force-app/main/default/objects/Exam_Result__c/fields/Skills_Complete__c.field-meta.xml
<CustomField>
    <fullName>Skills_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Theory Skills &amp; Environment Completed?</description>
    <inlineHelpText>Theory Skills &amp; Environment Completed?</inlineHelpText>
    <label>Skills Complete</label>
    <type>Checkbox</type>
</CustomField>