force-app/main/default/objects/Exam_Result__c/fields/Skills_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Skills_End_Time__c</fullName>
    <label>Skills End Time</label>
    <type>DateTime</type>
</CustomField>