force-app/main/default/objects/Exam_Result__c/fields/Skills_Environment_Score__c.field-meta.xml
<CustomField>
    <fullName>Skills_Environment_Score__c</fullName>
    <description>Theory Skills and Environment Score</description>
    <label>Skills Environment Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>