force-app/main/default/objects/Exam_Result__c/fields/Skills_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Skills_Start_Time__c</fullName>
    <label>Skills Start Time</label>
    <type>DateTime</type>
</CustomField>