force-app/main/default/objects/Exam_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Candidate_Full_Name__c</columns>
    <columns>Exam__c</columns>
    <columns>Physics_Score__c</columns>
    <columns>Physiology_Score__c</columns>
    <columns>RDP_Score__c</columns>
    <columns>Skills_Environment_Score__c</columns>
    <columns>Equipment_Score__c</columns>
    <columns>GSP_Score__c</columns>
    <columns>Pass__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>